Refactor database schema by removing unused columns and updating null constraints